# STM32CubeMX_Gaps-projects

./: README.md
dual_core/: test.cbuild-idx.yml  test.cbuild-pack.yml  test.csolution.yml
dual_core/STM32CubeMX/STM32H745BGTx/: project.script  project_cm4.cgen.yml  project_cm7.cgen.yml
dual_core/STM32CubeMX/STM32H745BGTx/MX_Device/project_cm4/: MX_Device.h
dual_core/STM32CubeMX/STM32H745BGTx/MX_Device/project_cm7/: MX_Device.h
dual_core/STM32CubeMX/STM32H745BGTx/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
dual_core/STM32CubeMX/STM32H745BGTx/STM32CubeMX/CM4/Src/: main.c  stm32h7xx_hal_msp.c
dual_core/STM32CubeMX/STM32H745BGTx/STM32CubeMX/CM7/Src/: main.c  stm32h7xx_hal_msp.c
dual_core/STM32CubeMX/STM32H745BGTx/STM32CubeMX/MDK-ARM/: STM32CubeMX.uvprojx
dual_core/tmp/project_cm4/STM32H745BGTx/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_cm4.Debug+STM32H745BGTx.cbuild-gen.yml
dual_core/tmp/project_cm4/STM32H745BGTx/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_cm4.Release+STM32H745BGTx.cbuild-gen.yml
dual_core/tmp/project_cm7/STM32H745BGTx/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_cm7.Debug+STM32H745BGTx.cbuild-gen.yml  test.cbuild-gen-idx.yml
dual_core/tmp/project_cm7/STM32H745BGTx/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_cm7.Release+STM32H745BGTx.cbuild-gen.yml  test.cbuild-gen-idx.yml
secure_nonsecure/: test.cbuild-idx.yml  test.csolution.yml
secure_nonsecure/STM32CubeMX/Board/: project.script  project_ns.cgen.yml  project_s.cgen.yml
secure_nonsecure/STM32CubeMX/Board/MX_Device/project_ns/: MX_Device.h
secure_nonsecure/STM32CubeMX/Board/MX_Device/project_s/: MX_Device.h
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/MDK-ARM/: Project.uvmpw  STM32CubeMX_NS.uvoptx  STM32CubeMX_NS.uvprojx  STM32CubeMX_S.uvoptx  STM32CubeMX_S.uvprojx
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/NonSecure/Inc/: main.h  stm32u5xx_hal_conf.h
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/NonSecure/Src/: main.c  stm32u5xx_hal_msp.c
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/Secure/Inc/: stm32u5xx_hal_conf.h
secure_nonsecure/STM32CubeMX/Board/STM32CubeMX/Secure/Src/: main.c  stm32u5xx_hal_msp.c
secure_nonsecure/tmp/project_ns/Board/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json  project_ns.Debug+Board.cbuild-gen.yml
secure_nonsecure/tmp/project_ns/Board/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_ns.Release+Board.cbuild-gen.yml  test.cbuild-gen-idx.yml
secure_nonsecure/tmp/project_s/Board/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  project_s.Debug+Board.cbuild-gen.yml  test.cbuild-gen-idx.yml
secure_nonsecure/tmp/project_s/Board/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json  project_s.Release+Board.cbuild-gen.yml
